fix: backface visibility

--- a/modal.css
+++ b/modal.css
@@ -13,9 +13,6 @@
   min-width: 330px;
   height: auto;
   z-index: 2000;
-  -webkit-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  backface-visibility: hidden;
   -webkit-transform: translateX(-50%) translateY(-50%);
   -moz-transform: translateX(-50%) translateY(-50%);
   -ms-transform: translateX(-50%) translateY(-50%);
